cambios en open graph

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:url" content="https://deniskawata.github.io/Shalapranayoga/">
     <meta property="og:title" content="Shala Prana Yoga">
     <meta property="og:description" content="Ofrecemos distintos tipos de clases y brindamos a todos la oportunidad de conocer y explorar la practica a través de estos estilos, para que así cada uno pueda elegir y combinar como  más les guste y beneficie.">
-    <meta property="og:image" content="./images/shalapranayoga.png">
+    <meta property="og:image" content="/shalapranayoga.png">
 
 <!--========== Favicon ===========-->
     <link rel="shortcut icon" href="./images/Favicon.png" type="image/x-icon">
