--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
 <body>
 <!--========== Seccion Inicio ==========-->
-    <section id="inicio">
+    <div id="inicio">
         <header class="hero">
             <nav class="nav container">
                 <div class="nav__logo">
-                    <img src="./images/Logo blanco.png" class="nav__title">
+                    <img src="./images/Logo_blanco.png" class="nav__title" alt="Logo blanco">
                 </div>
 
                 <ul class="nav__link nav__link--menu">
@@ -50,50 +50,50 @@
                     <li class="nav__items">
                         <a href="https://api.whatsapp.com/send/?phone=5491139127189&text&type=phone_number&app_absent=0" class="nav__links">Contacto</a>
                     </li>
-                    
-                    <img src="./images/close.svg" class="nav__close">
                 </ul>
 
+                <img src="./images/close.svg" class="nav__close" alt="Close">
+
                 <div class="nav__menu">
-                    <img src="./images/menu.svg" class="nav__img">
+                    <img src="./images/menu.svg" class="nav__img" alt="Menu">
                 </div>
             </nav>
 
             <section class="hero__container container">
-                <h1 class="hero__title">YOGA para todxs!</h1>
+                <h2 class="hero__title">YOGA para todxs!</h2>
                 <p class="hero__paragraph">Ofrecemos distintos tipos de clases y brindamos a todos la oportunidad de conocer y explorar la practica a través de estos estilos, para que así cada uno pueda elegir y combinar como  más les guste y beneficie.</p>
                 <a href="https://api.whatsapp.com/send/?phone=5491139127189&text&type=phone_number&app_absent=0" class="cta">Comienza ahora</a>
             </section>
         </header>
-    </section>
+    </div>
 
     <main>
-        <section id="nosotros">
+        <div id="nosotros">
             <section class="container about">
                 <h2 class="subtitle">¿Qué aprenderás en estas clases?</h2>
                 <p class="about__paragraph">El Yoga es transformador. No solo cambia nuestra forma de ver las cosas, sino que transforma a la persona que ve.</p>
 
                 <div class="about__main">
                     <article class="about__icons">
-                        <img src="./images/yoga_vitalidad.svg" class="about__icon">
+                        <img src="./images/yoga_vitalidad.svg" class="about__icon" alt="Yoga Vitalidad">
                         <h3 class="about__title">Vitalidad</h3>
                         <p class="about__paragrah">Una práctica regular de Yoga te va a permitir un mejor descanso en las noches ya que al poner en movimiento el cuerpo, liberas toxinas que te permiten dormir bien.</p>
                     </article>
 
                     <article class="about__icons">
-                        <img src="./images/yoga_equilibrio.svg" class="about__icon">
+                        <img src="./images/yoga_equilibrio.svg" class="about__icon" alt="Yoga Equilibrio">
                         <h3 class="about__title">Equilibrio</h3>
                         <p class="about__paragrah">A nivel emocional, con la práctica regular vas a conectarte con tu mente, cuerpo y espíritu lo que favorece un conocimiento integral de uno mismo y permite que florezca la sabiduría.</p>
                     </article>
 
                     <article class="about__icons">
-                        <img src="./images/yoga_conexion.svg" class="about__icon">
+                        <img src="./images/yoga_conexion.svg" class="about__icon" alt="Yoga Conexión">
                         <h3 class="about__title">Conexión</h3>
                         <p class="about__paragrah">La idea del Yoga es ayudarte a encontrar un estado de equilibrio psíquico y emocional ya que la conexión con nuestra mente, cuerpo y espíritu conducen a un estado de armonía integral.</p>
                     </article>
                 </div>
             </section>
-        </section>
+        </div>
 
         <section class="knowledge">
             <div class="knowledge__container container">
@@ -104,13 +104,13 @@
                 </div>
 
                 <figure class="knowledge__picture">
-                    <img src="./images/Shala prana virtual.png" class="knowledge__img">
+                    <img src="./images/Shala_prana_virtual.png" class="knowledge__img" alt="Shala prana virtual">
                 </figure>
             </div>
         </section>
 
 <!--========== Seccion Aranceles ==========-->
-        <section id="aranceles">
+        <div id="aranceles">
             <section class="price container">
                 <h2 class="subtitle">Obten el pack perfecto para tus clases</h2>
                 <!--===== Pack simple =====-->
@@ -159,12 +159,12 @@
 
                 </div>
             </section>
-        </section>
+        </div>
 
 <!--========== Seccion Testimonios ==========-->
-        <section class="testimony">
+        <div class="testimony">
             <div class="testimony__container container">
-                <img src="./images/leftarrow.svg" class="testimony__arrow" id="before">
+                <img src="./images/leftarrow.svg" class="testimony__arrow" id="before" alt="Leftarrow">
 
                 <section class="testimony__body testimony__body--show" data-id="1">
                     <div class="testimony__texts">
@@ -173,7 +173,7 @@
                     </div>
 
                     <figure class="testimony__picture">
-                        <img src="./images/Google_maps.png" class="testimony__img">
+                        <img src="./images/Google_maps.png" class="testimony__img" alt="Google maps">
                     </figure>
                 </section>
 
@@ -206,27 +206,27 @@
                     </div>
 
                     <figure class="testimony__picture">
-                        <img src="./images/Google_maps.png" class="testimony__img">
+                        <img src="./images/Google_maps.png" class="testimony__img" alt="Google maps">
                     </figure>
                 </section>
 
 
-                <img src="./images/rightarrow.svg" class="testimony__arrow" id="next">
+                <img src="./images/rightarrow.svg" class="testimony__arrow" id="next" alt="Rightarrow">
             </div>
-        </section>
+        </div>
 
 <!--========== Seccion Nuestras Clases ==========-->
-        <section id="clases">
+        <div id="clases">
             <section class="questions container">
                 <h2 class="subtitle">Nuestras Clases</h2>
                 <p class="questions__paragraph">Contamos con clases regulares para todxs, teniendo la opción de combinar distintos estilos. Lo distintivo de nuestro espacio es el objetivo de pluralizar la práctica y que todxs puedan acceder a esta hermosa disciplina.</p>
 
-                <section class="questions__container">
+                <div class="questions__container">
                     <article class="questions__padding">
                         <div class="questions__answer">
                          <h3 class="questions__title">Vinyasa Flow
                                 <span class="questions__arrow">
-                                    <img src="./images/arrow.svg" class="questions__img">
+                                    <img src="./images/arrow.svg" class="questions__img" alt="Arrow">
                                 </span>
                             </h3>
 
@@ -238,7 +238,7 @@
                         <div class="questions__answer">
                             <h3 class="questions__title">Yoga Terapéutico
                                 <span class="questions__arrow">
-                                    <img src="./images/arrow.svg" class="questions__img">
+                                    <img src="./images/arrow.svg" class="questions__img" alt="Arrow">
                                 </span>
                             </h3>
 
@@ -250,7 +250,7 @@
                         <div class="questions__answer">
                             <h3 class="questions__title">Cuerpo Flexible
                                 <span class="questions__arrow">
-                                    <img src="./images/arrow.svg" class="questions__img">
+                                    <img src="./images/arrow.svg" class="questions__img" alt="Arrow">
                                 </span>
                             </h3>
 
@@ -262,14 +262,14 @@
                         <div class="questions__answer">
                             <h3 class="questions__title">Hatha Yoga
                                 <span class="questions__arrow">
-                                    <img src="./images/arrow.svg" class="questions__img">
+                                    <img src="./images/arrow.svg" class="questions__img" alt="Arrow">
                                 </span>
                             </h3>
 
                             <p class="questions__show">Las clases de Hatha apuntan a secuencias simples donde hacemos hincapié en la correcta alineación del cuerpo en cada postura, considerando los fundamentos de la biomecánica. Ayudándonos con elementos adaptamos las posturas a las posibilidades de cada unx para avanzar en la práctica de forma segura. Apta para todos!</p>
                         </div>
                     </article>
-                </section>
+                </div>
 
                 <section class="questions__offer">
                     <h2 class="subtitle">Ubicación</h2>
@@ -277,14 +277,14 @@
                     <a href="https://goo.gl/maps/WeNjDKXh9U4KVvT27" class="cta">Encontranos</a>
                 </section>
             </section>
-        </section>
+        </div>
     </main>
 
 <!--========== Seccion Footer ==========-->
     <footer class="footer">
         <section class="footer__container container">
             <nav class="nav nav--footer">
-                <img src="./images/Logo.png" class="nav__title">
+                <img src="./images/Logo.png" class="nav__title" alt="Logo">
 
                 <ul class="nav__link nav__link--footer">
                     <li class="nav__items">
@@ -318,9 +318,9 @@
 <!--========== Iconos de las redes sociales ==========-->
         <section class="footer__copy container">
             <div class="footer__social">
-                <a href="https://www.instagram.com/shalapranayoga/?hl=es" class="footer__icons"><img src="./images/instagram.svg" class="footer__img"></a>
-                <a href="https://www.facebook.com/ShalaPranaYoga" class="footer__icons"><img src="./images/facebook.svg" class="footer__img"></a>
-                <a href="https://www.youtube.com/@shalapranayoga1228" class="footer__icons"><img src="./images/youtube.svg" class="footer__img"></a>
+                <a href="https://www.instagram.com/shalapranayoga/?hl=es" class="footer__icons"><img src="./images/instagram.svg" class="footer__img" alt="Instagram"></a>
+                <a href="https://www.facebook.com/ShalaPranaYoga" class="footer__icons"><img src="./images/facebook.svg" class="footer__img" alt="Facebook"></a>
+                <a href="https://www.youtube.com/@shalapranayoga1228" class="footer__icons"><img src="./images/youtube.svg" class="footer__img" alt="Youtube"></a>
                 
             </div>
 
