--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     </div>
 
                     <figure class="testimony__picture">
-                        <img src="./images/Google_maps.png" class="testimony__img">
+                        <img src="./images/Google_maps.png" class="testimony__img" alt="Google maps">
                     </figure>
                 </section>
 
@@ -195,7 +195,7 @@
                     </div>
 
                     <figure class="testimony__picture">
-                        <img src="./images/Google_maps.png" class="testimony__img">
+                        <img src="./images/Google_maps.png" class="testimony__img" alt="Google maps">
                     </figure>
                 </section>
 
